--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,10 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build
+    - name: hacs validation
+      uses: "hacs/action@main"
+      with:
+        category: "plugin"
     - uses: actions/upload-artifact@v4
       with:
         name: dist
