--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,8 +16,8 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build
-    - name: hacs validation
-      uses: "hacs/action@main"
+    - name: Run hacs validation
+      uses: hacs/action@22.5.0
       with:
         category: "plugin"
     - uses: actions/upload-artifact@v4
